contact count, overflow-y scroll, and list fixed height

--- a/pw-mypubs-ui/src/main/webapp/mypubs/publication/contacts/contacts.css
+++ b/pw-mypubs-ui/src/main/webapp/mypubs/publication/contacts/contacts.css
@@ -14,6 +14,10 @@
 	background-color: #EEEEFF !important;
 }
 
+.list-group {
+	height: 520px;
+	overflow-y: scroll;
+}
 .list-group-item {
 	border-bottom: none !important;
 }
